portfolio/css/responsive.css
@media screen and (min-width: 400px) {
  .tablet-index {
    display: none;
  }

  .about {
    display: none; 
  }

.w-portfolio {
    display: grid;
    grid-template-columns: 1fr;
    grid-auto-rows: 200px;
    grid-gap: 50px;
}

.fp-caption-title {
  display: none;
}

.fp-caption-text {
  display: none;
}

button {
  display: none;
}

}

@media screen and (min-width: 650px) {
  .mobile-index {
    display: none;
  }

  .tablet-index {
    display: block;
  }

  .fp-portfolio {
      grid-gap: 10px;
  }

  .container {
      grid-template-columns: 1fr 1fr;
  }

  .about {
    display: inline;
  }

  .w-portfolio {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-auto-rows: 200px;
    grid-gap: 60px;
}

.fp-caption-title {
  display: inline-block;
}
.fp-caption-text {
  display: none;
}

button {
  display: block;
}

}

@media screen and (min-width: 1000px) {
  .mobile-index {
    display: none;
  }

  .tablet-index {
    display: block;
  }

  .fp-portfolio {
      grid-gap: 50px;
  }

  .about {
    display: inline;
  }

  .w-portfolio {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-auto-rows: 200px;
    grid-gap: 50px;
}

.fp-caption-title {
  display: inline-block;
}
.fp-caption-text {
  display: inline-block;
}

button {
  display: none;
}


}

